# ColorNameFinder

./: .gitignore  LICENSE  README.md  pyproject.toml
assets/coolors/: copic.csv  hks.csv  name.csv  pantone.csv  ral.csv  readme.md
assets/meodai/: readme.md
assets/sources/coolors/: prismacolor.csv
src/: PKG-INFO  SOURCES.txt  __init__.py  clamp.py  color_name_finder.py  color_transforms.py  hex_tools.py
tests/: gd_act.ipynb
