[project]
name = "ColorNameFinder"
version = "0.0.1"
authors = [
  { name="Robert Collins", email="roberto.tomas.cuentas@gmail.com" },
]
description = "An artist's color name search tool - given a csv of colors, find the best matching color when considering tint, shade, or tone"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/robbiemu/ColorNameFinder"
"Bug Tracker" = "https://github.com/robbiemu/ColorNameFinder/issues"

[build-system]
requires = ["setuptools>=61.0", "scikit-learn>=1.2.1","scikit-image>=0.19.3"]
build-backend = "setuptools.build_meta"
